--- a/sample-folder/templates/cfn-template-ec2.yaml
+++ b/sample-folder/templates/cfn-template-ec2.yaml
@@ -1,18 +1,24 @@
-# 以下のAWSリソースを作成するYamlファイルです。
-# VPC * 1 InternetGW *1
-# PublicSubnet * 1, RouteTable * 1
-# EC2 * 1, SecurityGroup * 1
+# 以下AWSリソースを作成するYamlファイルです。
+# |Resource|Number|
+# |---|---|
+# |VPC|1|
+# |InternetGW|1|
+# |Public Subnet|1|
+# |RouteTable|1|
+# |EC2|1|
+# |Security Group|1|Parameters:
 
 Parameters:
+# Common
   YYYYMMDD:
-    Description: Input the date. ex) 20200701
+    Description: Input a today's date. ex)20200704
     Type: String
   HandsonName:
-    Description: Input the handson name.
+    Description: Input a handson name. Do not change as much as possible.
     Type: String
-    Default: String #入力箇所
+    Default: turus-handson #入力
     AllowedValues: 
-      - String #入力
+      - turus-handson #入力
 
 # VPC
   VpcCidrBlock:
@@ -21,7 +27,7 @@ Parameters:
 
 # Public Subnet
   AZ:
-    Description: Input a AZ where Public Subnet will be created.
+    Description: Select a AZ where Public Subnet will be created.
     Type: AWS::EC2::AvailabilityZone::Name
   PublicSubnetCidrBlock:
     Description: Input a Public Subnet IPv4 CidrBlock.  ex) 192.168.2.0/25
@@ -33,18 +39,52 @@ Parameters:
 
 # EC2
   AmiId:
-    Description: Enter the ami-id. Default is AmazonLinux2 of quick start
+    Description: Input an ami-id. Default is AmazonLinux2 of quick start.
     Type: String
     Default: ami-0a1c2ec61571737db
-
   InstanceType:
-    Description: Enter the instance type
+    Description: Input an Instance type.
     Type: String
     Default: t3.micro
-
   KeyPair:
-    Description: Enter the key pair
+    Description: Input your key pair.
     Type: "AWS::EC2::KeyPair::KeyName"
+  InstanceName:
+    Description: Input a instance name. Do not change as much as possible.
+    Type: String
+    Default: String #入力
+    AllowedValues: 
+      - String # 入力
+
+Metadata:
+  AWS::CloudFormation::Interface:
+    ParameterGroups:
+      -
+        Label:
+          default: Common
+        Parameters: 
+          - YYYYMMDD
+          - HandsonName
+      -
+        Label:
+          default: VPC
+        Parameters: 
+          - VpcCidrBlock
+      -
+        Label:
+          default: Public Subnet
+        Parameters: 
+          - AZ
+          - PublicSubnetCidrBlock
+      -
+        Label:
+          default: EC2
+        Parameters: 
+          - AmiId
+          - InstanceType
+          - KeyPair
+          - InstanceName
+
 
 Resources:
 # VPC
@@ -57,11 +97,7 @@ Resources:
       InstanceTenancy: default
       Tags: 
         - Key: Name
-          Value: !Join
-            - "-"
-            - - !Ref YYYYMMDD
-              - !Ref HandsonName
-              - vpc
+          Value: !Sub ${YYYYMMDD}-${HandsonName}-vpc
 
 # PublicSubnet
   MyPublicSubnet:
@@ -73,11 +109,7 @@ Resources:
       VpcId: !Ref MyVPC
       Tags: 
         - Key: Name
-          Value: !Join
-            - "-"
-            - - !Ref YYYYMMDD
-              - !Ref HandsonName
-              - pub-sub
+          Value: !Sub ${YYYYMMDD}-${HandsonName}-pub-sub
 
 # InternetGW
   MyInternetGW:
@@ -85,11 +117,7 @@ Resources:
     Properties: 
       Tags: 
         - Key: Name
-          Value: !Join
-            - "-"
-            - - !Ref YYYYMMDD
-              - !Ref HandsonName
-              - igw
+          Value: !Sub ${YYYYMMDD}-${HandsonName}-igw
   
   MyVPCGatewayAttachment:
     Type: AWS::EC2::VPCGatewayAttachment
@@ -104,11 +132,7 @@ Resources:
       VpcId: !Ref MyVPC
       Tags: 
         - Key: Name
-          Value: !Join
-            - "-"
-            - - !Ref YYYYMMDD
-              - !Ref HandsonName
-              - pub-rtb
+          Value: !Sub ${YYYYMMDD}-${HandsonName}-pub-rtb
 
   MyPublicRoute:
     Type: AWS::EC2::Route
@@ -151,34 +175,16 @@ Resources:
           SubnetId: !Ref MyPublicSubnet
       Tags: 
         - Key: Name
-          Value: !Join
-            - "-"
-            - - !Ref YYYYMMDD
-              - !Ref HandsonName
-              - ap # 入力箇所
+          Value: !Sub ${YYYYMMDD}-${HandsonName}-${InstanceName}
       # UserData: String
 
-# SG # 入力箇所
+# SG
   MySecurityGroup:
     Type: AWS::EC2::SecurityGroup
     Properties: 
       VpcId: !Ref MyVPC
-      GroupDescription: !Join
-        - " "
-        - - Security Group attached to
-          - !Join
-            - "-"
-            - - !Ref YYYYMMDD
-              - !Ref HandsonName
-              - ap
-      GroupName: !Join
-        - "_"
-        - - sg
-          - !Join
-            - "-"
-            - - !Ref YYYYMMDD
-              - !Ref HandsonName
-              - ap
+      GroupDescription: !Sub Security Group attached to ${YYYYMMDD}-${HandsonName}-${InstanceName}
+      GroupName: !Sub sg_${YYYYMMDD}-${HandsonName}-${InstanceName}
       SecurityGroupIngress: # 入力
         -   CidrIp: 0.0.0.0/0
             Description: SSH port
