テンプレートファイルをコンポーネント化しました

--- a/sample-folder/templates/cfn-template-vpc.yml
+++ b/sample-folder/templates/cfn-template-vpc.yml
@@ -16,9 +16,9 @@ Parameters:
   HandsonName:
     Description: Input a handson name. Do not change as much as possible.
     Type: String
-    Default: String #入力
+    Default: xxx-handson
     AllowedValues: 
-      - String #入力
+      - xxx-handson
 
 # VPC
   VpcCidrBlock:
@@ -62,12 +62,6 @@ Metadata:
     ParameterGroups:
       -
         Label:
-          default: Common
-        Parameters: 
-          - YYYYMMDD
-          - HandsonName
-      -
-        Label:
           default: VPC
         Parameters: 
           - VpcCidrBlock
@@ -98,7 +92,7 @@ Resources:
       InstanceTenancy: default
       Tags: 
         - Key: Name
-          Value: !Sub ${YYYYMMDD}-${HandsonName}-vpc
+          Value: !Sub ${YYYYMMDD}-${Handson}-vpc
 
 # PublicSubnet
   MyPublicSubnet:
@@ -148,49 +142,23 @@ Resources:
         RouteTableId: !Ref MyRouteTable
         SubnetId: !Ref MyPublicSubnet
 
-# EC2
-  MyEC2Instance:
-    Type: AWS::EC2::Instance
-    Properties: 
-      EbsOptimized: true
-      # IamInstanceProfile: #入力
-      DisableApiTermination: false
-      InstanceInitiatedShutdownBehavior: stop
-      Monitoring: false
-      Tenancy: default
-      ImageId: !Ref AmiId
-      InstanceType: !Ref InstanceType
-      KeyName: !Ref KeyPair
-      BlockDeviceMappings: 
-        - DeviceName: /dev/xvda
-          Ebs: 
-            VolumeSize: 8
-            VolumeType: gp2
-            DeleteOnTermination: true
-      NetworkInterfaces:
-        - AssociatePublicIpAddress: false
-          DeleteOnTermination: true
-          GroupSet: 
-            - !Ref MySecurityGroup
-          DeviceIndex: 0
-          SubnetId: !Ref MyPublicSubnet
-      Tags: 
-        - Key: Name
-          Value: !Sub ${YYYYMMDD}-${HandsonName}-${InstanceName}
-      # UserData: String
-
-# SG
-  MySecurityGroup:
-    Type: AWS::EC2::SecurityGroup
-    Properties: 
-      VpcId: !Ref MyVPC
-      GroupDescription: !Sub Security Group attached to ${YYYYMMDD}-${HandsonName}-${InstanceName}
-      GroupName: !Sub sg_${YYYYMMDD}-${HandsonName}-${InstanceName}
-      SecurityGroupIngress: # 入力
-        -   CidrIp: 0.0.0.0/0
-            Description: SSH port
-            FromPort: 22
-            IpProtocol: tcp
-            # SourceSecurityGroupId: String
-            # SourceSecurityGroupName: String
-            ToPort: 22
+# SSM Parameter
+# SSM
+  SSMPrefix:
+    Type: AWS::SSM::Parameter
+    Properties:
+      Name: !Sub /${HandsonName}/Prefix
+      Value: !Sub ${YYYYMMDD}-${HandsonName}
+      Type: String
+  SSMVpcId:
+    Type: AWS::SSM::Parameter
+    Properties:
+      Name: !Sub /${HandsonName}/VpcId
+      Value: !Ref MyVPC
+      Type: String
+  SSMSubnetId:
+    Type: AWS::SSM::Parameter
+    Properties:
+      Name: !Sub /${HandsonName}/SubnetId
+      Value: !Ref MySubnet
+      Type: String
