--- a/sample-folder/templates/cfn-template-ec2.yml
+++ b/sample-folder/templates/cfn-template-ec2.yml
@@ -1,4 +1,4 @@
-# 以下AWSリソースを作成するYamlファイルです。
+# Yml file that builds the following AWS resources
 # |Resource|Number|
 # |---|---|
 # |EC2|1|
@@ -9,15 +9,15 @@ Parameters:
   YYYYMMDD:
     Description: Input a today's date. ex)20200704
     Type: AWS::SSM::Parameter::Value<String>
-    Default: /${HandsonName}/YYYYMMDD
+    Default: /xxx-handson/YYYYMMDD
     AllowedValues: 
-      - /${HandsonName}/YYYYMMDD
+      - /xxx-handson/YYYYMMDD
   HandsonName:
     Description: Input a handson name. Do not change as much as possible.
     Type: AWS::SSM::Parameter::Value<String>
-    Default: /${HandsonName}/HandsonName
+    Default: /xxx-handson/HandsonName
     AllowedValues: 
-      - /${HandsonName}/HandsonName
+      - /xxx-handson/HandsonName
 
 # EC2
   SubnetId:
@@ -47,9 +47,9 @@ Parameters:
   VpcId:
     Description: Input a handson name. Do not change as much as possible.
     Type: AWS::SSM::Parameter::Value<String>
-    Default: /${HandsonName}/VpcId 
+    Default: /xxx-handson/VpcId 
     AllowedValues: 
-      - /${HandsonName}/VpcId
+      - /xxx-handson/VpcId
 
 Metadata:
   AWS::CloudFormation::Interface:
