--- a/sample-folder/templates/cfn-template-vpc.yml
+++ b/sample-folder/templates/cfn-template-vpc.yml
@@ -5,8 +5,6 @@
 # |InternetGW|1|
 # |Public Subnet|1|
 # |RouteTable|1|
-# |EC2|1|
-# |Security Group|1|
 
 Parameters:
 # Common
@@ -36,29 +34,16 @@ Parameters:
 
 # RouteTable for Public Subnet
 
-# EC2
-  AmiId:
-    Description: Input an ami-id. Default is AmazonLinux2 of quick start.
-    Type: String
-    Default: ami-0a1c2ec61571737db
-  InstanceType:
-    Description: Input an Instance type.
-    Type: String
-    Default: t3.micro
-  KeyPair:
-    Description: Input your key pair.
-    Type: "AWS::EC2::KeyPair::KeyName"
-  InstanceName:
-    Description: Input a instance name. Do not change as much as possible.
-    Type: String
-    Default: String #入力
-    AllowedValues: 
-      - String # 入力
-
 
 Metadata:
   AWS::CloudFormation::Interface:
     ParameterGroups:
+      -
+        Label:
+          default: Common
+        Parameters: 
+          - YYYYMMDD
+          - HandsonName
       -
         Label:
           default: VPC
@@ -69,16 +54,7 @@ Metadata:
           default: Public Subnet
         Parameters: 
           - AZ
-          - PublicSubnetCidrBlock
-      -
-        Label:
-          default: EC2
-        Parameters: 
-          - AmiId
-          - InstanceType
-          - KeyPair
-          - InstanceName
-          
+          - PublicSubnetCidrBlock          
 
 Resources:
 # VPC
