SSMParemeter をコンポーネント化, IamRoleのテンプレート追加

--- a/sample-folder/templates/cfn-template-ec2.yml
+++ b/sample-folder/templates/cfn-template-ec2.yml
@@ -96,7 +96,7 @@ Resources:
             VolumeType: gp2
             DeleteOnTermination: true
       NetworkInterfaces:
-        - AssociatePublicIpAddress: false
+        - AssociatePublicIpAddress: true
           DeleteOnTermination: true
           GroupSet: 
             - !Ref MySG
@@ -121,4 +121,4 @@ Resources:
             IpProtocol: tcp
             # SourceSecurityGroupId: String
             # SourceSecurityGroupName: String
-            ToPort: 
+            ToPort: 22
