ACMを作成するcfn-templateを追加

--- a/sample-folder/templates/cfn-template-iam-role.yml
+++ b/sample-folder/templates/cfn-template-iam-role.yml
@@ -58,10 +58,10 @@ Resources:
       Roles: 
         - !Ref IamRole
 
-  SSMInstanchProfileName:
+  SSMInstanceProfileName:
     Type: AWS::SSM::Parameter
     Properties:
-      Name: !Sub /${HandsonName}/InstanchProfileName
+      Name: !Sub /${HandsonName}/InstanceProfileName
       Value: !Ref InstanceProfile
       Type: String
 
